k8s/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: spring-petclinic
  labels:
    app: spring-petclinic
spec:
  to:
    kind: Service
    name: spring-petclinic
    weight: 100
  port:
    targetPort: 8080
